修改文件使能够在MSVC上编译。可能存在问题的改动： 1. disassembler_x86.cc中将memcpy改为::memcpy；

--- a/src/processor/processor.vcproj
+++ b/src/processor/processor.vcproj
@@ -1,1 +1,443 @@
-<?xml version="1.0" encoding="Windows-1252"?><VisualStudioProject Keyword="Win32Proj" Name="processor" ProjectGUID="{18EFDEEA-F415-C4F1-F22E-17EA08F1F2F9}" ProjectType="Visual C++" RootNamespace="processor" Version="9.00"><Platforms><Platform Name="Win32"/></Platforms><ToolFiles/><Configurations><Configuration ConfigurationType="4" IntermediateDirectory="$(ConfigurationName)\obj\$(ProjectName)\" Name="Default|Win32" OutputDirectory="$(SolutionDir)$(ConfigurationName)\"><Tool AdditionalIncludeDirectories=".." Name="VCCLCompilerTool" ProgramDataBaseFileName="$(IntDir)$(ProjectName)\vc80.pdb"/><Tool AdditionalIncludeDirectories=".." Name="VCResourceCompilerTool"/><Tool Name="VCLibrarianTool" OutputFile="$(OutDir)lib\$(ProjectName).lib"/><Tool AdditionalDependencies="$(NOINHERIT)" Name="VCLinkerTool"/></Configuration></Configurations><References/><Files><File RelativePath="address_map-inl.h"/><File RelativePath="address_map.h"/><File RelativePath="basic_code_module.h"/><File RelativePath="basic_code_modules.cc"/><File RelativePath="basic_code_modules.h"/><File RelativePath="basic_source_line_resolver.cc"/><File RelativePath="basic_source_line_resolver_types.h"/><File RelativePath="binarystream.cc"/><File RelativePath="binarystream.h"/><File RelativePath="call_stack.cc"/><File RelativePath="cfi_frame_info-inl.h"/><File RelativePath="cfi_frame_info.cc"/><File RelativePath="cfi_frame_info.h"/><File RelativePath="contained_range_map-inl.h"/><File RelativePath="contained_range_map.h"/><File RelativePath="disassembler_x86.cc"/><File RelativePath="disassembler_x86.h"/><File RelativePath="dump_context.cc"/><File RelativePath="dump_object.cc"/><File RelativePath="exploitability.cc"/><File RelativePath="exploitability_linux.cc"/><File RelativePath="exploitability_linux.h"/><File RelativePath="exploitability_win.cc"/><File RelativePath="exploitability_win.h"/><File RelativePath="fast_source_line_resolver.cc"/><File RelativePath="fast_source_line_resolver_types.h"/><File RelativePath="linked_ptr.h"/><File RelativePath="logging.cc"/><File RelativePath="logging.h"/><File RelativePath="map_serializers-inl.h"/><File RelativePath="map_serializers.h"/><File RelativePath="microdump_processor.cc"/><File RelativePath="minidump.cc"/><File RelativePath="minidump_processor.cc"/><File RelativePath="module_comparer.cc"/><File RelativePath="module_comparer.h"/><File RelativePath="module_factory.h"/><File RelativePath="module_serializer.cc"/><File RelativePath="module_serializer.h"/><File RelativePath="pathname_stripper.cc"/><File RelativePath="pathname_stripper.h"/><File RelativePath="postfix_evaluator-inl.h"/><File RelativePath="postfix_evaluator.h"/><File RelativePath="process_state.cc"/><File RelativePath="range_map-inl.h"/><File RelativePath="range_map.h"/><File RelativePath="simple_serializer-inl.h"/><File RelativePath="simple_serializer.h"/><File RelativePath="simple_symbol_supplier.cc"/><File RelativePath="simple_symbol_supplier.h"/><File RelativePath="source_line_resolver_base.cc"/><File RelativePath="source_line_resolver_base_types.h"/><File RelativePath="stack_frame_cpu.cc"/><File RelativePath="stack_frame_symbolizer.cc"/><File RelativePath="stackwalker.cc"/><File RelativePath="stackwalker_address_list.cc"/><File RelativePath="stackwalker_address_list.h"/><File RelativePath="stackwalker_amd64.cc"/><File RelativePath="stackwalker_amd64.h"/><File RelativePath="stackwalker_arm.cc"/><File RelativePath="stackwalker_arm.h"/><File RelativePath="stackwalker_arm64.cc"/><File RelativePath="stackwalker_arm64.h"/><File RelativePath="stackwalker_mips.cc"/><File RelativePath="stackwalker_mips.h"/><File RelativePath="stackwalker_ppc.cc"/><File RelativePath="stackwalker_ppc.h"/><File RelativePath="stackwalker_ppc64.cc"/><File RelativePath="stackwalker_ppc64.h"/><File RelativePath="stackwalker_selftest.cc"/><File RelativePath="stackwalker_sparc.cc"/><File RelativePath="stackwalker_sparc.h"/><File RelativePath="stackwalker_x86.cc"/><File RelativePath="stackwalker_x86.h"/><File RelativePath="static_address_map-inl.h"/><File RelativePath="static_address_map.h"/><File RelativePath="static_contained_range_map-inl.h"/><File RelativePath="static_contained_range_map.h"/><File RelativePath="static_map-inl.h"/><File RelativePath="static_map.h"/><File RelativePath="static_map_iterator-inl.h"/><File RelativePath="static_map_iterator.h"/><File RelativePath="static_range_map-inl.h"/><File RelativePath="static_range_map.h"/><File RelativePath="synth_minidump.cc"/><File RelativePath="synth_minidump.h"/><File RelativePath="tokenize.cc"/><File RelativePath="tokenize.h"/><File RelativePath="windows_frame_info.h"/><File RelativePath="processor.gyp"/></Files><Globals/></VisualStudioProject>
+<?xml version="1.0" encoding="Windows-1252"?>
+<VisualStudioProject
+	ProjectType="Visual C++"
+	Version="9.00"
+	Name="processor"
+	ProjectGUID="{18EFDEEA-F415-C4F1-F22E-17EA08F1F2F9}"
+	RootNamespace="processor"
+	Keyword="Win32Proj"
+	TargetFrameworkVersion="0"
+	>
+	<Platforms>
+		<Platform
+			Name="Win32"
+		/>
+	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
+	<Configurations>
+		<Configuration
+			Name="Default|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)\"
+			IntermediateDirectory="$(ConfigurationName)\obj\$(ProjectName)\"
+			ConfigurationType="4"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories=".."
+				PreprocessorDefinitions="NOMINMAX"
+				ProgramDataBaseFileName="$(IntDir)$(ProjectName)\vc80.pdb"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				AdditionalIncludeDirectories=".."
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLibrarianTool"
+				OutputFile="$(OutDir)lib\$(ProjectName).lib"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+	</Configurations>
+	<References>
+	</References>
+	<Files>
+		<File
+			RelativePath="address_map-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="address_map.h"
+			>
+		</File>
+		<File
+			RelativePath="basic_code_module.h"
+			>
+		</File>
+		<File
+			RelativePath="basic_code_modules.cc"
+			>
+		</File>
+		<File
+			RelativePath="basic_code_modules.h"
+			>
+		</File>
+		<File
+			RelativePath="basic_source_line_resolver.cc"
+			>
+		</File>
+		<File
+			RelativePath="basic_source_line_resolver_types.h"
+			>
+		</File>
+		<File
+			RelativePath="binarystream.cc"
+			>
+		</File>
+		<File
+			RelativePath="binarystream.h"
+			>
+		</File>
+		<File
+			RelativePath="call_stack.cc"
+			>
+		</File>
+		<File
+			RelativePath="cfi_frame_info-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="cfi_frame_info.cc"
+			>
+		</File>
+		<File
+			RelativePath="cfi_frame_info.h"
+			>
+		</File>
+		<File
+			RelativePath="contained_range_map-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="contained_range_map.h"
+			>
+		</File>
+		<File
+			RelativePath="disassembler_x86.cc"
+			>
+		</File>
+		<File
+			RelativePath="disassembler_x86.h"
+			>
+		</File>
+		<File
+			RelativePath="dump_context.cc"
+			>
+		</File>
+		<File
+			RelativePath="dump_object.cc"
+			>
+		</File>
+		<File
+			RelativePath="exploitability.cc"
+			>
+		</File>
+		<File
+			RelativePath="exploitability_linux.cc"
+			>
+		</File>
+		<File
+			RelativePath="exploitability_linux.h"
+			>
+		</File>
+		<File
+			RelativePath="exploitability_win.cc"
+			>
+		</File>
+		<File
+			RelativePath="exploitability_win.h"
+			>
+		</File>
+		<File
+			RelativePath="fast_source_line_resolver.cc"
+			>
+		</File>
+		<File
+			RelativePath="fast_source_line_resolver_types.h"
+			>
+		</File>
+		<File
+			RelativePath="linked_ptr.h"
+			>
+		</File>
+		<File
+			RelativePath="logging.cc"
+			>
+		</File>
+		<File
+			RelativePath="logging.h"
+			>
+		</File>
+		<File
+			RelativePath="map_serializers-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="map_serializers.h"
+			>
+		</File>
+		<File
+			RelativePath="microdump_processor.cc"
+			>
+		</File>
+		<File
+			RelativePath="minidump.cc"
+			>
+		</File>
+		<File
+			RelativePath="minidump_processor.cc"
+			>
+		</File>
+		<File
+			RelativePath="module_comparer.cc"
+			>
+		</File>
+		<File
+			RelativePath="module_comparer.h"
+			>
+		</File>
+		<File
+			RelativePath="module_factory.h"
+			>
+		</File>
+		<File
+			RelativePath="module_serializer.cc"
+			>
+		</File>
+		<File
+			RelativePath="module_serializer.h"
+			>
+		</File>
+		<File
+			RelativePath="pathname_stripper.cc"
+			>
+		</File>
+		<File
+			RelativePath="pathname_stripper.h"
+			>
+		</File>
+		<File
+			RelativePath="postfix_evaluator-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="postfix_evaluator.h"
+			>
+		</File>
+		<File
+			RelativePath="process_state.cc"
+			>
+		</File>
+		<File
+			RelativePath="processor.gyp"
+			>
+		</File>
+		<File
+			RelativePath="range_map-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="range_map.h"
+			>
+		</File>
+		<File
+			RelativePath="simple_serializer-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="simple_serializer.h"
+			>
+		</File>
+		<File
+			RelativePath="simple_symbol_supplier.cc"
+			>
+		</File>
+		<File
+			RelativePath="simple_symbol_supplier.h"
+			>
+		</File>
+		<File
+			RelativePath="source_line_resolver_base.cc"
+			>
+		</File>
+		<File
+			RelativePath="source_line_resolver_base_types.h"
+			>
+		</File>
+		<File
+			RelativePath="stack_frame_cpu.cc"
+			>
+		</File>
+		<File
+			RelativePath="stack_frame_symbolizer.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_address_list.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_address_list.h"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_amd64.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_amd64.h"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_arm.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_arm.h"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_arm64.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_arm64.h"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_mips.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_mips.h"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_ppc.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_ppc.h"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_ppc64.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_ppc64.h"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_selftest.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_sparc.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_sparc.h"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_x86.cc"
+			>
+		</File>
+		<File
+			RelativePath="stackwalker_x86.h"
+			>
+		</File>
+		<File
+			RelativePath="static_address_map-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="static_address_map.h"
+			>
+		</File>
+		<File
+			RelativePath="static_contained_range_map-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="static_contained_range_map.h"
+			>
+		</File>
+		<File
+			RelativePath="static_map-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="static_map.h"
+			>
+		</File>
+		<File
+			RelativePath="static_map_iterator-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="static_map_iterator.h"
+			>
+		</File>
+		<File
+			RelativePath="static_range_map-inl.h"
+			>
+		</File>
+		<File
+			RelativePath="static_range_map.h"
+			>
+		</File>
+		<File
+			RelativePath="synth_minidump.cc"
+			>
+		</File>
+		<File
+			RelativePath="synth_minidump.h"
+			>
+		</File>
+		<File
+			RelativePath="tokenize.cc"
+			>
+		</File>
+		<File
+			RelativePath="tokenize.h"
+			>
+		</File>
+		<File
+			RelativePath="windows_frame_info.h"
+			>
+		</File>
+	</Files>
+	<Globals>
+	</Globals>
+</VisualStudioProject>
