--- a/src/processor/minidump_stackwalk.vcproj
+++ b/src/processor/minidump_stackwalk.vcproj
@@ -56,6 +56,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="$(NOINHERIT)"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
+				GenerateDebugInformation="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
