--- a/src/processor/processor.vcproj
+++ b/src/processor/processor.vcproj
@@ -42,6 +42,7 @@
 				AdditionalIncludeDirectories=".."
 				PreprocessorDefinitions="NOMINMAX"
 				ProgramDataBaseFileName="$(IntDir)$(ProjectName)\vc80.pdb"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
